--- a/index.html
+++ b/index.html
@@ -15,4 +15,6 @@
 <!--BODY-->
 <h1>SUP BISH</h1>
 
+<!--Headerimage--><img src="./images/headerPH.jpg" alt="Headerimage" id="header">
+
 <!--Ende BODY-->
