--- a/index.html
+++ b/index.html
@@ -17,4 +17,11 @@
 
 <!--Headerimage--><img src="./images/headerPH.jpg" alt="Headerimage" id="header">
 
+<!--Icons-->
+<div id="icons">
+    <img src=".icons/quality.png" alt="iconQuality" id="iconQuality">
+    <img src=".icons/results.png" alt="iconResults" id="iconResults">
+    <img src=".icons/sustainability.png" alt="iconSustain" id="iconSustain">
+</div>
+<!--Ende Icons-->
 <!--Ende BODY-->
