--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <!--Icons-->
 <div id="icons">
-    <img src=".icons/quality.png" alt="iconQuality" id="iconQuality">
-    <img src=".icons/results.png" alt="iconResults" id="iconResults">
-    <img src=".icons/sustainability.png" alt="iconSustain" id="iconSustain">
+    <img src="./icons/quality.png" alt="iconQuality" id="iconQuality">
+    <img src="./icons/results.png" alt="iconResults" id="iconResults">
+    <img src="./icons/sustainability.png" alt="iconSustain" id="iconSustain">
 </div>
 <!--Ende Icons-->
 <!--Ende BODY-->
