--- a/index.html
+++ b/index.html
@@ -24,4 +24,38 @@
     <img src="../icons/sustainability.png" alt="iconSustain" id="iconSustain">
 </div>
 <!--Ende Icons-->
+
+<!--Sprechblasen-->
+<!--Ende Sprechblasen-->
+
+<!--Text Geschmacksrichtungen-->
+<!--Ende Text Geschmacksrichtungen-->
+
+<!--Slider Geschmacksrichtungen-->
+<!--Ende Slider Geschmacksrichtungen-->
+
+<!--CTA 1 - Traumkörper-->
+<!--Ende CTA 1 - Traumkörper-->
+
+<!--CTA 2 - Komplettpaket-->
+<!--Ende CTA 2 - Komplettpaket-->
+
+<!--FAQ-->
+<!--Ende FAQ-->
+
+<!--Erhältlich bei-->
+<!--Ende Erhätlich bei-->
+
+<!--Instareel-->
+<!--Ende Instareel-->
+
+<!--CTA 3 - Coupon-->
+<!--Ende CTA 3 - Coupon-->
+
 <!--Ende BODY-->
+
+<!--FOOTER-->
+<footer>
+
+</footer>
+<!--ENDE FOOTER-->
