--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 <!--Ende Sprechblasen-->
 
 <!--Text Geschmacksrichtungen-->
+<div id="headTaste">
+    <h3>Fitness-Pizza</h3>
+</div>
+<div id="textTaste">
+    <p>Unsere Fitness-Pizza soll für jeden sein. Daher gibt es sie in drei leckeren </br> Geschmacksrichtungen: der Klassiker Margherita, die rustikale mit feinstem Schinken gelegt <br> und dann, für unsere veganen Freunde, eine vollständig vegane Variante. <br> Jeder soll fit werden – mit der Fitness-Pizza.</p>
+</div>
 <!--Ende Text Geschmacksrichtungen-->
 
 <!--Slider Geschmacksrichtungen-->
