--- a/index.html
+++ b/index.html
@@ -85,9 +85,23 @@
 <!--Ende FAQ-->
 
 <!--Erhältlich bei-->
+<div>
+    <h4>Erhältlich bei:</h4>
+    <img src="../images/rewe.png" alt="REWElogo" class="Marktlogo">
+    <img src="../images/edeka.png" alt="EDEKAlogo" class="Marktlogo">
+    <img src="../images/real.png" alt="REALlogo" class="Marktlogo">
+    <img src="../images/aldi.png" alt="ALDIlogo" class="Marktlogo">
+</div>
 <!--Ende Erhätlich bei-->
 
 <!--Instareel-->
+<div>
+    <h3>#FOODSPRINGPIZZA</h3>
+</div>
+
+<div>
+    
+</div>
 <!--Ende Instareel-->
 
 <!--CTA 3 - Coupon-->
