--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
 <!--Ende Slider Geschmacksrichtungen-->
 
 <!--CTA 1 - Traumkörper-->
+  <img src="../images/CTA1.jpg" alt="CTA1" id="cta1">
 <!--Ende CTA 1 - Traumkörper-->
 
 <!--CTA 2 - Komplettpaket-->
+  <img src="../images/CTA2.jpg" alt="CTA2" id="cta2">
 <!--Ende CTA 2 - Komplettpaket-->
 
 <!--FAQ-->
