--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
 </div>
 
 <div>
-
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-353688c2-bb1f-4bb5-9582-868e92b5a0fd"></div>
 </div>
 <!--Ende Instareel-->
 
