--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="../images/MockUp1.jpg" alt="First slide">
+        <img class="d-block w-100" src="../images/MockUp1.jpg" alt="First slide - Insta">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="../images/MockUp2.jpg" alt="Second slide">
+        <img class="d-block w-100" src="../images/MockUp2.jpg" alt="Second slide - Insta">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
