--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
 
 <!--FOOTER-->
 <footer>
+  <div>
+    <p><a href="index.html"></a>Impressum</p>
+    <p>AGB</p>
+    <p>Datenschutz</p>
+    <p>Kontakt</p>
+  </div>
 
 </footer>
 <!--ENDE FOOTER-->
