--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <!--FOOTER-->
 <footer>
   <div>
-    <p><a href="index.html"></a>Impressum</p>
+    <p><a href="./index.html"></a>Impressum</p>
     <p>AGB</p>
     <p>Datenschutz</p>
     <p>Kontakt</p>
