--- a/index.html
+++ b/index.html
@@ -168,12 +168,22 @@
 
 <!--FOOTER-->
 <footer>
-  <div>
+  <div id="footerLEFT"><!--LINKS-->
     <p><a href="../index.html"></a>Impressum</p>
-    <p>AGB</p>
-    <p>Datenschutz</p>
-    <p>Kontakt</p>
+    <p><a href="../index.html"></a>AGB</p>
+    <p><a href="../index.html"></a>Datenschutz</p>
+    <p><a href="../index.html"></a>Kontakt</p>
   </div>
 
+  <div><!--Social Media-->
+
+  </div>
+
+  <div id="footerRIGHT"><!--RECHTS-->
+    <p><a href="../index.html"></a>Karriere</p>
+    <p><a href="../index.html"></a>Kooperationen</p>
+    <p><a href="../index.html"></a>Freunde werben</p>
+    <p><a href="../index.html"></a>Bonusprogramm</p>
+  </div>
 </footer>
 <!--ENDE FOOTER-->
