--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
 <!--FOOTER-->
 <footer>
   <div id="footerLEFT"><!--LINKS-->
-    <p><a href="../index.html"></a>Impressum</p>
-    <p><a href="../index.html"></a>AGB</p>
-    <p><a href="../index.html"></a>Datenschutz</p>
-    <p><a href="../index.html"></a>Kontakt</p>
+    <p><a href="index.html"></a>Impressum</p>
+    <p><a href="index.html"></a>AGB</p>
+    <p><a href="index.html"></a>Datenschutz</p>
+    <p><a href="index.html"></a>Kontakt</p>
   </div>
 
   <div><!--Social Media-->
@@ -180,10 +180,10 @@
   </div>
 
   <div id="footerRIGHT"><!--RECHTS-->
-    <p><a href="../index.html"></a>Karriere</p>
-    <p><a href="../index.html"></a>Kooperationen</p>
-    <p><a href="../index.html"></a>Freunde werben</p>
-    <p><a href="../index.html"></a>Bonusprogramm</p>
+    <p><a href="index.html"></a>Karriere</p>
+    <p><a href="index.html"></a>Kooperationen</p>
+    <p><a href="index.html"></a>Freunde werben</p>
+    <p><a href="index.html"></a>Bonusprogramm</p>
   </div>
 </footer>
 <!--ENDE FOOTER-->
