--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 <!--ENDE SETUP-->
 
 <!--HEAD-->
+<head>
 <title>foodspring&reg; - Fitness-Pizza</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="stylesheet.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 <link rel="icon" href="https://d23o500odzh64r.cloudfront.net/media/favicon/default/favicon.ico" type="image/x-icon"/>
-
+</head>
 <!--ENDE HEAD-->
 
 <!--BODY-->
+<body>
 
+<div id="wrapper">
 <!--Headerimage--><img src="./images/headerPH.jpg" alt="Headerimage" id="header">
 
 <!--Icons-->
@@ -187,3 +190,6 @@
   </div>
 </footer>
 <!--ENDE FOOTER-->
+</div> <!--wrapper-->
+</body>
+</html>
