--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
 
   <div id="wrapper">
     <header>
-      <a href="index.html"><img src="./images/logo.png" alt="FOODSPRING"></a>
+      <a href="index.html"><img src="./images/logo.png" alt="FOODSPRING" id="Logo"></a>
       <!--Headerimage-->
       <img src="./images/headerPH.jpg" alt="Headerimage" id="header">
+      <article id="hero">
+      <h2>FITNESS-PIZZA</h2>
+      <h3>PIZZA À LA MAMMA. MACHT FIT.</h3>
+    </article>
     </header>
 
     <!--Icons-->
