--- a/index.html
+++ b/index.html
@@ -31,16 +31,23 @@
       <img src="./images/headerPH.jpg" alt="Headerimage" id="header">
     </header>
 
-    <!--Icons-->
-    <div id="icons">
-      <img src="../icons/quality.png" alt="iconQuality" id="iconQuality">
-      <img src="../icons/results.png" alt="iconResults" id="iconResults">
-      <img src="../icons/sustainability.png" alt="iconSustain" id="iconSustain">
-    </div>
-    <!--Ende Icons-->
+    <aside>
+      <section>
+        <img src="../icons/quality.png" alt="iconQuality" id="iconQuality">
+        <p><b>Qualität:</b> Wir verarbeiten nur die hochwertigsten Zutaten - aus aller Welt. Tomaten aus Italien, Getreide aus Deutschland. Für eure Gesundheit. </p>
+      </section>
 
-    <!--Sprechblasen-->
-    <!--Ende Sprechblasen-->
+      <section>
+        <img src="../icons/results.png" alt="iconResults" id="iconResults">
+        <p><b>Resultate:</b> Wir garantieren sichtbare Resultate in wenigen Monaten. Mit Geld-zurück-Garantie.</p>
+      </section>
+
+      <section>
+        <img src="../icons/sustainability.png" alt="iconSustain" id="iconSustain">
+        <p><b>Nachhaltigkeit:</b> Wir sind gegen Massentierhaltung. Wir nutzen nur die besten Zutaten für unsere Fitness-Pizza.</p>
+      </section>
+
+    </aside>
 
     <!--Text Geschmacksrichtungen-->
     <div id="headTaste">
