--- a/index.html
+++ b/index.html
@@ -92,12 +92,18 @@
     <!--Ende Slider Geschmacksrichtungen-->
 
     <!--CTA 1 - Traumkörper-->
-    <img src="../images/CTA1.jpg" alt="CTA1" id="cta1">
-    <!--Ende CTA 1 - Traumkörper-->
+    <div id="CTA1">
+      <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
+      <button><a href="index.html">Mit Pizza zum Traumkörper</a></button>
+    </div>
 
+    
     <!--CTA 2 - Komplettpaket-->
-    <img src="../images/CTA2.jpg" alt="CTA2" id="cta2">
-    <!--Ende CTA 2 - Komplettpaket-->
+    <div id="CTA2">
+      <a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a>
+      <button><a href="index.hmtl">Zum Angebot</a></button>
+    </div>
+
 
     <!--FAQ-->
     <div id="Q1">
