--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <aside>
       <section>
         <img src="../icons/quality.png" alt="iconQuality" id="iconQuality">
-        <p><b>Qualität:</b> Wir verarbeiten nur die hochwertigsten Zutaten - aus aller Welt. Tomaten aus Italien, Getreide aus Deutschland. Für eure Gesundheit. </p>
+        <p><b>Qualität:</b> Wir verarbeiten nur die hochwertigsten Zutaten - aus aller Welt. Tomaten aus Italien,
+          Getreide aus Deutschland. Für eure Gesundheit. </p>
       </section>
 
       <section>
@@ -44,7 +45,8 @@
 
       <section>
         <img src="../icons/sustainability.png" alt="iconSustain" id="iconSustain">
-        <p><b>Nachhaltigkeit:</b> Wir sind gegen Massentierhaltung. Wir nutzen nur die besten Zutaten für unsere Fitness-Pizza.</p>
+        <p><b>Nachhaltigkeit:</b> Wir sind gegen Massentierhaltung. Wir nutzen nur die besten Zutaten für unsere
+          Fitness-Pizza.</p>
       </section>
 
     </aside>
@@ -94,14 +96,14 @@
     <!--CTA 1 - Traumkörper-->
     <div id="CTA1">
       <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
-      <button><a href="index.html">Mit Pizza zum Traumkörper</a></button>
+      <a href="index.html"> <button>Mit Pizza zum Traumkörper</button></a>
     </div>
 
-    
+
     <!--CTA 2 - Komplettpaket-->
     <div id="CTA2">
       <a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a>
-      <button><a href="index.hmtl">Zum Angebot</a></button>
+      <a href="index.hmtl"><button>Zum Angebot</button></a>
     </div>
 
 
