--- a/index.html
+++ b/index.html
@@ -94,17 +94,19 @@
     <!--Ende Slider Geschmacksrichtungen-->
 
     <!--CTA 1 - Traumkörper-->
-    <div id="CTA1">
+    <div id="CTA">
       <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
+      <a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a>
+
       <a href="index.html"> <button>Mit Pizza zum Traumkörper</button></a>
+      <a href="index.hmtl"><button>Zum Angebot</button></a>
     </div>
 
 
     <!--CTA 2 - Komplettpaket-->
-    <div id="CTA2">
-      <a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a>
-      <a href="index.hmtl"><button>Zum Angebot</button></a>
-    </div>
+
+
+
 
 
     <!--FAQ-->
