--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
 
     <!--FAQ-->
-    <div id="Q1">
-      <p class="Frage">Inwiefern hilft Pizza beim Sport?</p>
+    <div id="FAQ">
+      <h4 class="Frage">Inwiefern hilft Pizza beim Sport?</h4>
 
       <p class="Antwort">
         Ganz einfach: Unsere Pizza, gespickt mit den besten <br>
@@ -119,20 +119,20 @@
         braucht – ganz ohne Chemie. Und das grenzt schon <br>
         fast an Magie!
       </p>
-    </div>
 
-    <div id="Q2">
-      <p class="Frage">Vegane Pizza - geht das?</p>
+
+
+      <h4 class="Frage">Vegane Pizza - geht das?</h4>
 
       <p class="Antwort">
         Natürlich! Wir haben die Zutaten mit Sorgfalt <br>
         gewählt – so, dass sie ihren unvergleichlichen <br>
         Geschmack behält.
       </p>
-    </div>
 
-    <div id="Q3">
-      <p class="Frage">Wird es noch mehr Varianten geben?</p>
+
+
+      <h4 class="Frage">Wird es noch mehr Varianten geben?</h4>
 
       <p class="Antwort">
         Wir arbeiten mit Hochdruck an neuen und ebenso <br>
