--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
       <a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a>
 
-      <a href="index.html"> <button>Mit Pizza zum Traumkörper</button></a>
-      <a href="index.hmtl"><button>Zum Angebot</button></a>
+      <a href="index.html"><button id="btn1">Mit Pizza zum Traumkörper</button></a>
+      <a href="index.hmtl"><button id="btn2">Zum Angebot</button></a>
     </div>
 
 
