--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <!--Ende FAQ-->
 
     <!--Erhältlich bei-->
-    <div>
+    <div id="Laden">
       <h4>Erhältlich bei:</h4>
       <img src="../images/rewe.png" alt="REWElogo" class="Marktlogo">
       <img src="../images/edeka.png" alt="EDEKAlogo" class="Marktlogo">
