--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
     <!--Erhältlich bei-->
     <div id="Laden">
       <h4>Erhältlich bei:</h4>
-      <img src="../images/rewe.png" alt="REWElogo" class="col-md-3">
-      <img src="../images/edeka.png" alt="EDEKAlogo" class="col-md-3">
-      <img src="../images/real.png" alt="REALlogo" class="col-md-3">
-      <img src="../images/aldi.png" alt="ALDIlogo" class="col-md-3">
+      <section class="LLogo"><img src="../images/rewe.png" alt="REWElogo" class="Marktlogo"></section>
+      <section class="LLogo"><img src="../images/edeka.png" alt="EDEKAlogo" class="Marktlogo"></section>
+      <section class="LLogo"><img src="../images/real.png" alt="REALlogo" class="Marktlogo"></section>
+      <section class="LLogo"><img src="../images/aldi.png" alt="ALDIlogo" class="Marktlogo"></section>
     </div>
     <!--Ende Erhätlich bei-->
 
