--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div id="textTaste">
       <p>Unsere Fitness-Pizza soll für jeden sein. Daher gibt es sie in drei leckeren <br>
-        Geschmacksrichtungen: der Klassiker Margherita, die rustikale mit feinstem Schinken gelegt <br>
+        Geschmacksrichtungen: der Klassiker Margherita, die Rustikale mit feinstem Schinken belegt <br>
         und dann, für unsere veganen Freunde, eine vollständig vegane Variante. <br>
         Jeder soll fit werden – mit der Fitness-Pizza.
       </p>
