--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
     <!--Ende Erhätlich bei-->
 
     <!--Instareel-->
-    <div>
+    <div id="reelHead">
       <h3>#FOODSPRINGPIZZA</h3>
     </div>
 
-    <div>
+    <div id="carousel2">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
