--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <!--Ende Instareel-->
 
     <!--CTA 3 - Coupon-->
-    <div>
+    <div id="cta3">
       <h3>Fit mit Pizza</h3>
       <p>Hol dir einen Coupon auf deine erste Pizza:</p>
 
