--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
     <!--CTA 1 - Traumkörper-->
     <div id="CTA">
       <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
-      <a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a>
-
+      <div class="hover01 column">
+        <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a></figure>
+      </div>
       <a href="index.html"><button id="btn1">Mit Pizza zum Traumkörper</button></a>
       <a href="index.hmtl"><button id="btn2">Zum Angebot</button></a>
     </div>
@@ -190,7 +191,7 @@
       <p>Hol dir einen Coupon auf deine erste Pizza:</p>
 
       <div>
-        <input type="text" placeholder="Deine E-Mail Adresse eingeben" name="mail" required id="mail">  
+        <input type="text" placeholder="Deine E-Mail Adresse eingeben" name="mail" required id="mail">
       </div>
       <input type="submit" value="Absenden" id="submit">
     </div>
