--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!--SETUP-->
 <!DOCTYPE html>
 <html lang="de">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">  
 <!--ENDE SETUP-->
 
 <!--HEAD-->
