--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--SETUP-->
 <!DOCTYPE html>
 <html lang="de">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <!--ENDE SETUP-->
 
 <!--HEAD-->
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" media="screen" href="stylesheet.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
@@ -99,10 +99,10 @@
       <!--Ende Slider Geschmacksrichtungen-->
 
       <!--CTA 1 - Traumkörper-->
-      <div id="CTA">
-        <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
+      <div class="row" id="CTA">
+        <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" class="col-12 col-md-8" id="cta1"></a>
         <div class="hover01 column">
-          <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a></figure>
+          <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" class="col-6 col-md-4" id="cta2"></a></figure>
         </div>
         <a href="index.html"><button id="btn1">Mit Pizza zum Traumkörper</button></a>
         <a href="index.hmtl"><button id="btn2">Zum Angebot</button></a>
