--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 
       <!--CTA 1 - Traumkörper-->
       <div class="row" id="CTA">
-        <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" class="col-12 col-md-8" id="cta1"></a>
+        <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
         <div class="hover01 column">
-          <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" class="col-6 col-md-4" id="cta2"></a></figure>
+          <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a></figure>
         </div>
         <a href="index.html"><button id="btn1">Mit Pizza zum Traumkörper</button></a>
         <a href="index.hmtl"><button id="btn2">Zum Angebot</button></a>
