--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
     rel="stylesheet">
   <link rel="icon" href="https://d23o500odzh64r.cloudfront.net/media/favicon/default/favicon.ico" type="image/x-icon" />
+  <script type="text/javascript" src="./script/main.js"></script>
 </head>
 <!--ENDE HEAD-->
 
@@ -26,10 +27,20 @@
 
 <body>
 
+  <nav>
+    <div class="row nav">
+      <div class="col col-3 flex"></div>
+        <div class="col col-6 flex">
+        <a href="#header"><img src="./images/logo2.png" width="auto" height="30px" alt="logo"></a>
+      </div>
+      <div class="col col-3 flex"><img src="./icons/sustainability.png" width="auto" height="30px" alt="logo"></div>
+      </div>
+    </nav>
+
   <div class="wrapper">
     <div class="content">
       <header>
-        <a href="index.html"><img src="./images/logo.png" alt="FOODSPRING" id="Logo"></a>
+        <!--<a href="index.html"><img src="./images/logo.png" alt="FOODSPRING" id="Logo"></a>-->
         <!--Headerimage-->
         <img src="./images/headerPH.jpg" alt="Headerimage" id="header">
       </header>
