--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
     rel="stylesheet">
   <link rel="icon" href="https://d23o500odzh64r.cloudfront.net/media/favicon/default/favicon.ico" type="image/x-icon" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="./script/main.js"></script>
 </head>
 <!--ENDE HEAD-->
