--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     rel="stylesheet">
   <link rel="icon" href="https://d23o500odzh64r.cloudfront.net/media/favicon/default/favicon.ico" type="image/x-icon" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./script/main.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </head>
 <!--ENDE HEAD-->
 
