--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="row nav">
       <div class="col col-3 flex"></div>
         <div class="col col-6 flex">
-        <a href="#logo"><img src="./images/logo2.png" width="auto" height="60px" alt="logo"></a>
+        <a href="index.html"><img src="./images/logo2.png" width="auto" height="60px" alt="logo" id="logo"></a>
       </div>
     </div>
     </nav>
