--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 
   <nav>
     <div class="row nav">
-      <div class="col col-3 flex"></div>
+      <div class="col col-3 flex">
         <div class="col col-6 flex">
         <a href="index.html"><img src="./images/logo2.png" width="auto" height="60px" alt="logo" id="logo"></a>
       </div>
+    </div>
     </div>
     </nav>
 
