--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
   <nav>
-        <a href="index.html"><img src="./images/logo2.png" width="auto" height="60px" alt="logo" class="Flogo"></a>
+        <a href="index.html"><img src="./images/logo2.png" alt="logo" class="Flogo"></a>
         <section class="banner"></section>
   </nav>
 
