--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
 <body>
 
   <nav>
-        <a href="index.html"><img src="./images/logo2.png" alt="logo" class="Flogo"></a>
-        <section class="banner"></section>
-  </nav>
+    <div class="row nav">
+      <div class="col col-3 flex"></div>
+        <div class="col col-6 flex">
+        <a href="index.html"><img src="./images/logo2.png" width="auto" height="60px" alt="logo" id="logo"></a>
+      </div>
+    </div>
+    </nav>
 
   <div class="wrapper">
     <div class="content">
