--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
 <body>
 
   <nav>
-    <div class="row nav">
-      <div class="col col-3 flex"></div>
-      <div class="col col-6 flex">
-        <a href="index.html"><img src="./images/logo2.png" width="auto" height="60px" alt="logo" id="logo"></a>
-      </div>
-    </div>
+
+    <a href="index.html"><img src="./images/logo2.png" width="120px" height="auto" alt="logo" id="logo"></a>
+    <div class="handle"></div>
+
   </nav>
 
   <div class="wrapper">
