--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <footer>
         
         <!--Social Media-->
-        <div id="svgs">
+        <div class="row" id="svgs">
           <!--FACEBOOK-->
           <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px" y="0px" width="50px" height="50px" viewBox="600 0 720 720" enable-background="new 600 0 720 720"
