--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <header>
         <!--<a href="index.html"><img src="./images/logo.png" alt="FOODSPRING" id="Logo"></a>-->
         <!--Headerimage-->
-        <img src="./images/headerPH.jpg" alt="Headerimage" id="header">
+        <img src="./images/header.jpg" alt="Headerimage" id="header">
       </header>
 
       <aside>
@@ -86,13 +86,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="../images/sortenreel.jpg" alt="First slide">
+              <img class="d-block w-100" src="../images/carousel1.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../images/sortenreel2.jpg" alt="Second slide">
+              <img class="d-block w-100" src="../images/carousel2.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../images/sortenreel3.jpg" alt="Third slide">
+              <img class="d-block w-100" src="../images/carousel3.jpg" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
