--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 
 
         <div class="row">
-          <div class="column">
+          <div class="column1">
             <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
             <a href="index.html"><button id="btn1">Mit Pizza zum Traumkörper</button></a>
           </div>
 
-          <div class="column">
+          <div class="column2">
             <div class="hover01 column">
               <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a></figure>
             </div>
@@ -239,7 +239,7 @@
 
 
     <!--Social Media-->
-    <div class="row" id="svgs">
+    <div class="row1" id="svgs">
       <!--FACEBOOK-->
       <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
         x="0px" y="0px" width="50px" height="50px" viewBox="600 0 720 720" enable-background="new 600 0 720 720"
