--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
 
-        <div class="row">
+        <div class="lb">
           <div class="column1">
             <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
             <a href="index.html"><button id="btn1">Mit Pizza zum Traumkörper</button></a>
