--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       </div>
 
       <!--YOUTUBE-->
-      <div class="row">
+      <div class="col">
         <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512"
           xml:space="preserve">
