--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
     <!--FOOTER-->
 
-
+  <div class="wrapper"> 
     <!--Social Media-->
     <div class="row" id="svgs">
       <!--FACEBOOK-->
@@ -334,7 +334,7 @@
       </div>
     </footer>
     <!--ENDE FOOTER-->
-
+</div> 
 
   </div>
   <!--wrapper-->
