--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <!--Social Media-->
     <div class="row" id="svgs">
       <!--FACEBOOK-->
-      <div class="col">
+      <div class="col-sm-3">
         <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="50px" height="50px" viewBox="600 0 720 720" enable-background="new 600 0 720 720"
           xml:space="preserve">
@@ -250,7 +250,7 @@
         </svg>
       </div>
       <!--INSTAGRAM-->
-      <div class="col">
+      <div class="col-sm-3">
         <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="511px" height="511px" viewBox="0 0 511 511" enable-background="new 0 0 511 511"
           xml:space="preserve">
@@ -282,7 +282,7 @@
       </div>
 
       <!--YOUTUBE-->
-      <div class="col">
+      <div class="col-sm-3">
         <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512"
           xml:space="preserve">
@@ -296,7 +296,7 @@
         </svg>
       </div>
       <!--PINTEREST-->
-      <div class="col">
+      <div class="col-sm-3">
         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="50px" height="50px" viewBox="0 0 510 510" enable-background="new 0 0 510 510"
           xml:space="preserve">
