--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
           x="0px" y="0px" width="511px" height="511px" viewBox="0 0 511 511" enable-background="new 0 0 511 511"
           xml:space="preserve">
           <g>
+          <a href="https://www.instagram.com/foodspring/?hl=de">
             <path fill="#A3A3A3" d="M359.489,177.692c-2.118-5.733-5.476-10.898-9.866-15.186c-4.234-4.391-9.452-7.746-15.184-9.863
 		c-4.648-1.807-11.621-3.976-24.532-4.545c-13.896-0.619-18.077-0.774-53.405-0.774c-35.275,0-39.459,0.154-53.404,0.774
 		c-12.859,0.568-19.885,2.738-24.533,4.545c-5.734,2.116-10.899,5.473-15.184,9.863c-4.442,4.237-7.799,9.452-9.918,15.186
@@ -280,7 +281,7 @@
 		s40.389,0.155,54.541,0.828c14.048,0.62,23.654,2.892,32.072,6.145c8.78,3.305,16.785,8.522,23.396,15.236
 		c6.767,6.612,11.932,14.565,15.288,23.448c3.255,8.368,5.526,18.026,6.146,32.074c0.62,14.101,0.674,18.594,0.674,54.486
 		C388.518,291.417,388.363,295.91,387.744,310.011z" />
-          </g>
+          </a></g>  
         </svg>
       </div>
 
@@ -289,6 +290,7 @@
         <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512"
           xml:space="preserve">
+          <a href="https://www.instagram.com/foodspring/?hl=de">
           <path fill="#A3A3A3" d="M224.113,303.961L307.387,256l-83.273-47.961V303.961z" />
           <path fill="#A3A3A3" d="M475.074,0H36.926C16.531,0,0,16.531,0,36.926v438.148C0,495.469,16.531,512,36.926,512h438.148
 	C495.469,512,512,495.469,512,475.074V36.926C512,16.531,495.469,0,475.074,0z M415.961,256.262c0,0,0,51.918-6.586,76.953
@@ -296,13 +298,14 @@
 	c-13.703-3.688-24.508-14.496-28.199-28.199c-6.59-24.77-6.59-76.949-6.59-76.949s0-51.914,6.59-76.949
 	c3.688-13.703,14.758-24.773,28.199-28.461C155.859,144,256,144,256,144s100.141,0,125.176,6.852
 	c13.703,3.688,24.508,14.496,28.199,28.199C416.227,204.086,415.961,256.262,415.961,256.262z" />
-        </svg>
+        </a></svg>
       </div>
       <!--PINTEREST-->
       <div class="col-sm-3 d-flex justify-content-center">
         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="50px" height="50px" viewBox="0 0 510 510" enable-background="new 0 0 510 510"
           xml:space="preserve">
+          <a href="https://www.pinterest.de/foodspring/">
           <g>
             <g id="post-pinterest">
               <path fill="#A3A3A3"
@@ -314,7 +317,7 @@
 			c0,17.851,5.1,33.15,12.75,48.45c2.55,5.101,2.55,7.65,2.55,12.75c0,15.3-10.2,25.5-25.5,25.5c-10.2,0-17.85-5.101-22.95-12.75
 			c-12.75-22.95-20.4-48.45-20.4-76.5c0-84.15,71.4-153,158.1-153s158.1,68.85,158.1,153C413.1,290.7,372.3,362.1,280.5,362.1z" />
             </g>
-          </g>
+          </g></a>
         </svg>
       </div>
     </div>
