--- a/index.html
+++ b/index.html
@@ -109,18 +109,17 @@
 
       <!--CTA 1 - Traumkörper-->
       
-
         <div class="lb">
           <div class="column1">
             <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
-            <a href="index.html"><button id="btn1">Mit Pizza zum Traumkörper</button></a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button id="btn1">Mit Pizza zum Traumkörper</button></a>
           </div>
 
           <div class="column2">
             <div class="hover01 column">
               <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a></figure>
             </div>
-            <a href="index.hmtl"><button id="btn2">Zum Angebot</button></a>
+            <a href="https://www.youtube.com/watch?v=klb4w35rcas"><button id="btn2">Zum Angebot</button></a>
           </div>
 
         </div>
