--- a/index.html
+++ b/index.html
@@ -163,16 +163,16 @@
       <div class="row">
         <h3>Erhältlich bei:</h3>
         <div class="col-sm-3 d-flex justify-content-center">
-          <section class="LLogo"><img src="../images/rewe.png" alt="REWElogo" class="Marktlogo"></section>
+          <img src="../images/rewe.png" alt="REWElogo" class="Marktlogo">
         </div>
         <div class="col-sm-3 d-flex justify-content-center">
-          <section class="LLogo"><img src="../images/edeka.png" alt="EDEKAlogo" class="Marktlogo"></section>
+          <img src="../images/edeka.png" alt="EDEKAlogo" class="Marktlogo">
         </div>
         <div class="col-sm-3 d-flex justify-content-center">
-          <section class="LLogo"><img src="../images/real.png" alt="REALlogo" class="Marktlogo"></section>
+          <img src="../images/real.png" alt="REALlogo" class="Marktlogo">
         </div>
         <div class="col-sm-3 d-flex justify-content-center">
-          <section class="LLogo"><img src="../images/aldi.png" alt="ALDIlogo" class="Marktlogo"></section>
+          <img src="../images/aldi.png" alt="ALDIlogo" class="Marktlogo">
         </div>
       </div>
       <!--Ende Erhätlich bei-->
