--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@
       <!--Erhältlich bei-->
       <div class="row">
         <h3>Erhältlich bei:</h3>
-        <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col-sm d-flex justify-content-center">
           <img src="../images/rewe.png" alt="REWElogo" class="Marktlogo">
         </div>
-        <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col-sm d-flex justify-content-center">
           <img src="../images/edeka.png" alt="EDEKAlogo" class="Marktlogo">
         </div>
-        <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col-sm d-flex justify-content-center">
           <img src="../images/real.png" alt="REALlogo" class="Marktlogo">
         </div>
-        <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col-sm d-flex justify-content-center">
           <img src="../images/aldi.png" alt="ALDIlogo" class="Marktlogo">
         </div>
       </div>
