--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
       <!--Ende FAQ-->
 
       <!--Erhältlich bei-->
+      <h3 id="markt">Erhältlich bei:</h3>
       <div class="row">
-        <h3>Erhältlich bei:</h3>
         <div class="col-sm d-flex justify-content-center">
           <img src="../images/rewe.png" alt="REWElogo" class="Marktlogo">
         </div>
