--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <!--<a href="index.html"><img src="./images/logo.png" alt="FOODSPRING" id="Logo"></a>-->
         <!--Headerimage-->
         <img src="./images/header.jpg" alt="Headerimage" id="header">
+        <div id="claim">
+          <h1>FITNESS-PIZZA</h1>
+          <h2>PIZZA À LA MAMMA: MACHT FIT.</h2>
+        </div>
+        
       </header>
 
       <aside>
