--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="./images/header.jpg" alt="Headerimage" id="header">
         <div id="claim">
           <h1>FITNESS-PIZZA</h1>
-          <h2>PIZZA À LA MAMMA: MACHT FIT.</h2>
+          <h2>PIZZA À LA MAMMA. MACHT FIT.</h2>
         </div>
         
       </header>
