--- a/index.html
+++ b/index.html
@@ -114,20 +114,15 @@
 
       <!--CTA 1 - Traumkörper-->
 
-      <div class="lb">
-        <div class="column1">
-          <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button id="btn1">Mit Pizza zum Traumkörper</button></a>
+      <div class="row">
+        <div class="col col-12 col-lg-8">
+                  <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
+             <button id="btn1">Mit Pizza zum Traumkörper</button></a>
         </div>
-
-        <div class="column2">
-          <div class="hover01 column">
-            <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a></figure>
-          </div>
-          <a href="https://www.youtube.com/watch?v=klb4w35rcas"><button id="btn2">Zum Angebot</button></a>
+        <div class="col col-12 col-lg-4 hover01">
+        <button id="btn2">Zum Angebot</button></a>
         </div>
-
-      </div>
+    </div>
 
 
       <!--CTA 2 - Komplettpaket-->
