--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
 
       <!--CTA 1 - Traumkörper-->
 
-      <div class="row">
+      <div class="row" class="cta">
         <div class="col col-12 col-lg-8">
                   <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
              <button id="btn1">Mit Pizza zum Traumkörper</button></a>
         </div>
         <div class="col col-12 col-lg-4 hover01">
+          <a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a>
         <button id="btn2">Zum Angebot</button></a>
         </div>
     </div>
