--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </a>
         </div>
         <div class="col col-12 col-lg-4 hover01">
-          <a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a>
+          <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a></figure>
           </a>
         </div>
       </div>
