--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               <img class="d-block w-100" src="../images/instareel1.jpg" alt="First slide - Insta">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../images/MockUp2.jpg" alt="Second slide - Insta">
+              <img class="d-block w-100" src="../images/instareel2.jpg" alt="Second slide - Insta">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
