--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <!--Social Media-->
     <div class="row" id="svgs">
       <!--FACEBOOK-->
-      <div class="col-sm-3 d-flex justify-content-center">
+      <div class="col-3 d-flex justify-content-center">
         <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="50px" height="50px" viewBox="600 0 720 720" enable-background="new 600 0 720 720"
           xml:space="preserve">
@@ -245,7 +245,7 @@
         </svg>
       </div>
       <!--INSTAGRAM-->
-      <div class="col-sm-3 d-flex justify-content-center">
+      <div class="col-3 d-flex justify-content-center">
         <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="511px" height="511px" viewBox="0 0 511 511" enable-background="new 0 0 511 511"
           xml:space="preserve">
@@ -278,7 +278,7 @@
       </div>
 
       <!--YOUTUBE-->
-      <div class="col-sm-3 d-flex justify-content-center">
+      <div class="col-3 d-flex justify-content-center">
         <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512"
           xml:space="preserve">
@@ -293,7 +293,7 @@
           </a></svg>
       </div>
       <!--PINTEREST-->
-      <div class="col-sm-3 d-flex justify-content-center">
+      <div class="col-3 d-flex justify-content-center">
         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="50px" height="50px" viewBox="0 0 510 510" enable-background="new 0 0 510 510"
           xml:space="preserve">
