--- a/index.html
+++ b/index.html
@@ -314,8 +314,11 @@
         </svg>
       </div>
     </div>
-
+</div>
+  <!--wrapper-->
+  
     <footer>
+      <div class="wrapper2">
       <div id="footerLEFT">
         <!--LINKS-->
         <p><a href="index.html">Impressum</a></p>
@@ -331,12 +334,12 @@
         <p><a href="index.html">Freunde werben</a></p>
         <p><a href="index.html">Bonusprogramm</a></p>
       </div>
+    </div>
     </footer>
     <!--ENDE FOOTER-->
 
 
-  </div>
-  <!--wrapper-->
+  
 
   <!--Script-->
   <!--Bootstrap-->
