--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <!--Ende Text Geschmacksrichtungen-->
 
       <!--Slider Geschmacksrichtungen-->
-      <div id="carousel">
+      <div data-aos="zoom-in" id="carousel">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
