--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <!--Ende Text Geschmacksrichtungen-->
 
       <!--Slider Geschmacksrichtungen-->
-      <div data-aos="zoom-in" id="carousel">
+      <div id="carousel">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -114,12 +114,12 @@
 
       <!--CTA 1 - Traumkörper-->
 
-      <div class="row" class="cta">
+      <div data-aos="zoom-in" class="row" class="cta">
         <div class="col col-12 col-lg-8">
           <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
           </a>
         </div>
-        <div class="col col-12 col-lg-4 hover01">
+        <div data-aos="zoom-in" class="col col-12 col-lg-4 hover01">
           <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a></figure>
           </a>
         </div>
