--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   <link rel="icon" href="https://d23o500odzh64r.cloudfront.net/media/favicon/default/favicon.ico" type="image/x-icon" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="main.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
+
+  <script>
+    AOS.init();
+  </script>
 </head>
 <!--ENDE HEAD-->
 
