--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="icon" href="https://d23o500odzh64r.cloudfront.net/media/favicon/default/favicon.ico" type="image/x-icon" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="main.js"></script>
+
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
 
@@ -120,12 +121,12 @@
 
       <!--CTA 1 - Traumkörper-->
 
-      <div data-aos="zoom-in" class="row" class="cta">
+      <div  class="row" class="cta">
         <div class="col col-12 col-lg-8">
           <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
           </a>
         </div>
-        <div data-aos="zoom-in" class="col col-12 col-lg-4 hover01">
+        <div  class="col col-12 col-lg-4 hover01">
           <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a></figure>
           </a>
         </div>
