--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script type="text/javascript" src="main.js"></script>
 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  
+
 </head>
 <!--ENDE HEAD-->
 
@@ -116,18 +116,21 @@
       <!--Ende Slider Geschmacksrichtungen-->
 
       <!--CTA 1 - Traumkörper-->
+      <div data-aos="zoom-in">
+        <div class="row" class="cta">
 
-      <div  class="row" class="cta">
-        <div class="col col-12 col-lg-8">
-          <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
-          </a>
-        </div>
-        <div  class="col col-12 col-lg-4 hover01">
-          <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a></figure>
-          </a>
+          <div class="col col-12 col-lg-8">
+            <a href="index.html"><img src="../images/CTA1.jpg" alt="CTA1" id="cta1"></a>
+            </a>
+          </div>
+
+
+          <div class="col col-12 col-lg-4 hover01">
+            <figure><a href="index.html"><img src="../images/CTA2.jpg" alt="CTA2" id="cta2"></a></figure>
+            </a>
+          </div>
         </div>
       </div>
-
 
       <!--CTA 2 - Komplettpaket-->
 
@@ -317,11 +320,11 @@
         </svg>
       </div>
     </div>
-</div>
+  </div>
   <!--wrapper-->
-  
-    <footer>
-      <div class="wrapper2">
+
+  <footer>
+    <div class="wrapper2">
       <div id="footerLEFT">
         <!--LINKS-->
         <p><a href="index.html">Impressum</a></p>
@@ -338,11 +341,11 @@
         <p><a href="index.html">Bonusprogramm</a></p>
       </div>
     </div>
-    </footer>
-    <!--ENDE FOOTER-->
+  </footer>
+  <!--ENDE FOOTER-->
 
 
-  
+
 
   <!--Script-->
   <!--Bootstrap-->
@@ -358,7 +361,7 @@
     crossorigin="anonymous"></script>
   <!--Ende Bootstrap-->
 
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
   <script>
     AOS.init();
