--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 
       <!--Erhältlich bei-->
       <h3 id="markt">Erhältlich bei:</h3>
+      <div data-aos="zoom-in">
       <div class="row">
         <div class="col-sm d-flex justify-content-center">
           <img src="../images/rewe.png" alt="REWElogo" class="Marktlogo">
@@ -182,13 +183,14 @@
           <img src="../images/aldi.png" alt="ALDIlogo" class="Marktlogo">
         </div>
       </div>
+    </div>
       <!--Ende Erhätlich bei-->
 
       <!--Instareel-->
       <div id="reelHead">
         <h2>#FOODSPRINGPIZZA</h2>
       </div>
-
+      <div data-aos="zoom-in">
       <div id="carousel2">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -213,6 +215,7 @@
           </a>
         </div>
       </div>
+    </div>
       <!--Ende Instareel-->
     </div>
     <!--content wrapper ende-->
