--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </header>
 
       <aside>
-        <section>
+        <section class="col-3 d-flex justify-content-center">
           <img src="../icons/quality.png" alt="iconQuality" id="iconQuality">
           <p><b>Qualität:</b> Wir verarbeiten nur die hochwertigsten Zutaten - aus aller Welt. Tomaten aus Italien,
             Getreide aus Deutschland. Für eure Gesundheit. </p>
