--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <h1>Fitness-Pizza</h1>
       </div>
       <div id="textTaste">
-        <p>Unsere Fitness-Pizza soll für jeden sein. Daher gibt es sie in drei leckeren 
-          Geschmacksrichtungen: der Klassiker Margherita, die Rustikale mit feinstem Schinken belegt 
-          und dann, für unsere veganen Freunde, eine vollständig vegane Variante. 
+        <p>Unsere Fitness-Pizza soll für jeden sein. Daher gibt es sie in drei leckeren <br>
+          Geschmacksrichtungen: der Klassiker Margherita, die Rustikale mit feinstem Schinken belegt <br>
+          und dann, für unsere veganen Freunde, eine vollständig vegane Variante. <br>
           Jeder soll fit werden – mit der Fitness-Pizza.
         </p>
       </div>
@@ -139,9 +139,9 @@
         <h4 class="Frage">Inwiefern hilft Pizza beim Sport?</h4>
 
         <p class="Antwort">
-          Ganz einfach: Unsere Pizza, gespickt mit den besten 
-          Zutaten, hat alles was man für den Muskelaufbau 
-          braucht – ganz ohne Chemie. Und das grenzt schon 
+          Ganz einfach: Unsere Pizza, gespickt mit den besten <br>
+          Zutaten, hat alles was man für den Muskelaufbau <br>
+          braucht – ganz ohne Chemie. Und das grenzt schon <br>
           fast an Magie!
         </p>
 
