--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
           <img src="../images/rewe.png" alt="REWElogo" class="Marktlogo">
         </div>
         <div class="col-sm d-flex justify-content-center">
-          <img src="../images/edeka.png" alt="EDEKAlogo" class="Marktlogo">
+          <img src="../images/edeka.jpg" alt="EDEKAlogo" class="Marktlogo">
         </div>
         <div class="col-sm d-flex justify-content-center">
           <img src="../images/real.png" alt="REALlogo" class="Marktlogo">
         </div>
         <div class="col-sm d-flex justify-content-center">
-          <img src="../images/aldi.png" alt="ALDIlogo" class="Marktlogo">
+          <img src="../images/netto.png" alt="ALDIlogo" class="Marktlogo">
         </div>
       </div>
     </div>
